# tearchan-example

./: .gitignore  Cargo.toml  deploy_android_app.sh
common/: Cargo.toml  build.rs
common/resources/: example.json
common/src/: lib.rs
common/src/action/: mod.rs
common/src/scene/: file_scene.rs  hello_world_scene.rs  mod.rs
platform/desktop/: Cargo.toml
platform/desktop/src/: main.rs
platform/ios/: Cargo.toml  build.rs
platform/ios/src/: lib.rs
platform/ios/xcode/: build_rust_deps.sh  project.yml
platform/ios/xcode/src/: Info.plist
platform/web/: Cargo.toml  index.html  index.js  package-lock.json  package.json  webpack.config.js
platform/web/src/: lib.rs
src/: lib.rs
