[workspace]
members = [
    "common",
    "platform/ios",
    "platform/web",
    "platform/desktop",
]

# cargo-apk is not supported workspace
[package]
name = "tearchan-example-android"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
log = "0.4.11"
env_logger = "0.8.1"
common = { path = "common" }

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.2.1"
ndk-glue = "0.2.1"
