[package]
name = "common"
version = "0.0.1"
edition = "2018"

[features]
web = ["tearchan-gfx/webgl"]
vulkan = ["tearchan-gfx/vulkan"]

[dependencies]
# libs
log = "0.4.11"
env_logger = "0.8.1"
# framworks
winit = { version = "0.24.0", features = ["web-sys"] }
gfx-hal = { path = "../../gfx/src/hal" }
tearchan = { path="../../tearchan" }
tearchan-gfx = { path="../../tearchan/tearchan-gfx" }
tearchan-horde = { path="../../tearchan/tearchan-horde" }
